--- a/new-york.html
+++ b/new-york.html
@@ -9,6 +9,7 @@
             <li > <a href="#blog"></a>blog</li>
             <li> <a href="#Media"></a> Media</li>
             <li> <a href="#About"></a>About</li>
+            <p>ghffghf</p>
             </ul>
     </nav>
     <header>
