modified index.html and day.css

--- a/css/resume/sun/sun.html
+++ b/css/resume/sun/sun.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <link href='style.css' rel='stylesheet'>
-   <title>about sun</title>
+   <title >about sun</title>
 </head>
-<h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Sun</span></h1>
+<h1 id="sun"><span>Sun</span></h1>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/80/Wikipedia-logo-v2.svg/1200px-Wikipedia-logo-v2.svg.png" >
 <body>
 <h5>From Wikipedia, the free </h5>
 </body>
 <div>
-   <h2 style="background-color:salmon;">The Sun is the star at the center of the Solar System. It is a massive hot ball of plasma, inflated and heated by nuclear fusion reactions at its core. Part of this internal energy is emited from the Sun's surface as light, ultraviolet, and infrared radiation, providing most of the energy for life on Earth.</h2> 
+   <h2>The Sun is the star at the center of the Solar System. It is a massive hot ball of plasma, inflated and heated by nuclear fusion reactions at its core. Part of this internal energy is emited from the Sun's surface as light, ultraviolet, and infrared radiation, providing most of the energy for life on Earth.</h2> 
 </div>
 <img src="https://images.nationalgeographic.org/image/upload/t_edhub_resource_key_image/v1638882786/EducationHub/photos/sun-blasts-a-m66-flare.jpg">
 </html>
@@ -21,8 +22,7 @@
 
 </head>
 <body>
-   <p>The English word sun developed from Old English sunne. Cognates appear in other Germanic languages, including West Frisian sinne, Dutch zon, Low German Sünn, Standard German Sonne, Bavarian Sunna, Old Norse sunna, and Gothic sunnō. All these words stem from Proto-Germanic *sunnōn.[22][23] This is ultimately related to the word for sun in other branches of the Indo-European language family, though in most cases a nominative stem with an l is found, rather than the genitive stem in n, as for example in Latin sōl, ancient Greek ἥλιος (hēlios), Welsh haul and Czech slunce, as well as (with *l > r) Sanskrit स्वर (svár) and Persian خور (xvar).</p>
-   <span class="mw-headline" id="Structure_and_fusion"></span><dr></dr>
+   <p class="mw-headline">The English word sun developed from Old English sunne. Cognates appear in other Germanic languages, including West Frisian sinne, Dutch zon, Low German Sünn, Standard German Sonne, Bavarian Sunna, Old Norse sunna, and Gothic sunnō. All these words stem from Proto-Germanic *sunnōn.[22][23] This is ultimately related to the word for sun in other branches of the Indo-European language family, though in most cases a nominative stem with an l is found, rather than the genitive stem in n, as for example in Latin sōl, ancient Greek ἥλιος (hēlios), Welsh haul and Czech slunce, as well as (with *l > r) Sanskrit स्वर (svár) and Persian خور (xvar).</p>
    <h1 style="color: blueviolet;">Structure and fusion</h1>
    <p>The core of the Sun extends from the center to about 20–25% of the solar radius.[55] It has a density of up to 150 g/cm3[56][57] (about 150 times the density of water) and a temperature of close to 15.7 million Kelvin (K).[57] By contrast, the Sun's surface temperature is approximately 5800 K</p>
 </body>
@@ -37,13 +37,37 @@
 
 
 </p>
-<p>sun is star efgrvdvdergddcdc
-   The Sun today is roughly halfway through the most stable part of its life. It has not changed dramatically in over four billion[a] years and will remain fairly stable for more than five billion more. However, after hydrogen fusion in its core has stopped, the Sun will undergo dramatic changes, both internally and externally. It is more massive than 71 of 75 other stars within 5 pc,[122] or in the top ~5 percent.
-</p>
-
-<body>
-  seven -1
-
+<style>
+  .h2 {
+    color: red;
+  }
+  </style>
   
-   The post-asymptotic-giant-branch evolution is even faster. The luminosity stays approximately constant as the temperature increases, with the ejected half of the Sun's mass becoming ionized into a planetary nebula as the exposed core reaches 30,000 K (29,700 °C; 53,500 °F), as if it is in a sort of blue loop. The final naked core, a white dwarf, will have a temperature of over 100,000 K (100,000 °C; 180,000 °F), and contain an estimated 54.05% of the Sun's present-day mass.[139] The planetary nebula will disperse in about 10,000 years, but the white dwarf will survive for trillions of years before fading to a hypothetical black dwarf.
-</body>
+  <body>
+    <h1>Size of Sun</h1>
+    <a href="https://youtu.be/8ayHXTnN4fk?si=PWVv6e_2L5WS1268">how look sun?</a>
+  </body>
+<table>
+<th>
+<td>The radius of the Sun, R☉, is 109 times that of Earth
+</td>
+<td>The surface viewed from Earth, called the photosphere</td>
+<td>The nuclei of atoms are completely stripped of their electrons</td>
+</th>
+
+
+
+
+
+</table>
+<footer>
+   <p>sun is star 
+      The Sun today is roughly halfway through the most stable part of its life. It has not changed dramatically in over four billion[a] years and will remain fairly stable for more than five billion more. However, after hydrogen fusion in its core has stopped, the Sun will undergo dramatic changes, both internally and externally. It is more massive than 71 of 75 other stars within 5 pc,[122] or in the top ~5 percent.
+   </p>
+   
+   <p>
+       The post-asymptotic-giant-branch evolution is even faster. The luminosity stays approximately constant as the temperature increases, with the ejected half of the Sun's mass becoming ionized into a planetary nebula as the exposed core reaches 30,000 K (29,700 °C; 53,500 °F), as if it is in a sort of blue loop. The final naked core, a white dwarf, will have a temperature of over 100,000 K (100,000 °C; 180,000 °F), and contain an estimated 54.05% of the Sun's present-day mass.[139] The planetary nebula will disperse in about 10,000 years, but the white dwarf will survive for trillions of years before fading to a hypothetical black dwarf. 
+   </p>
+     
+</footer>
+
