--- a/css/resume/fotomatic/own/index.html
+++ b/css/resume/fotomatic/own/index.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Fotomatic</title>
-    <!-- Google Fonts -->
+
     <link href="https://fonts.googleapis.com/css?family=Damion" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,600,700" rel="stylesheet" type="text/css">
-    <!-- Linked CSS Stylesheets -->
-    <link rel="stylesheet" type="text/css" href="./resources/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+
     <link rel="stylesheet" href="index.css".css">
   </head>
 
@@ -19,11 +17,9 @@
       <div class="content">
         <a href="index.html" class="desktop logo">Fotomatic</a>
         <nav class="desktop">
-          <ul>
-            <li><a href="#">Product detail</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="https://www.instagram.com/">Follow us <img class="icon" src="images/instagram.png"></a></li>
-          </ul>
+            <a href="#">Product detail</a>
+            <a href="#">About us</a>
+            <a href="https://www.instagram.com/">Follow us <img class="icon" src="images/instagram.png"></a>
         </nav>
         <nav class="mobile">
           <ul>
