--- a/css/resume/last/index.html
+++ b/css/resume/last/index.html
@@ -24,8 +24,8 @@
     </header>
     <main class="main-grid">
             <div class="head">
-            <h1 class="page-title">About us</h1>
-            <p class="subtitle">We are specialsts in web development. Creativity and fun are our ingredients for awesome work.</p>
+        <h1 class="page-title">About me</h1>
+            <p class="subtitle">I'm specialsts in web development. Creativity and fun are our ingredients for awesome work.</p>
             </div>
             <img class="main-image" src="https://media.sproutsocial.com/uploads/2022/06/profile-picture.jpeg" alt="about us">
             
