--- a/css/resume/fotomatic/own/index.html
+++ b/css/resume/fotomatic/own/index.html
@@ -35,8 +35,8 @@
         <div id="sign-up-cta">
           <div class="content center">
             <div class="header">
-              <h2 class="cursive">Instant</h2>
-              <h1 class="striking">FORMAT CAMERA</h1>
+              <h2 class="ins">Instant</h2>
+              <h1 class="format">FORMAT CAMERA</h1>
             </div>
             <div class="email">
               <span>
@@ -48,7 +48,6 @@
         </div>
       </div>
 
-      <!-- Features Section -->
       <div id="features-section">
         <div class="feature">
           <div class="center">
